fix(visualeditor) Fixed unaligned VisualEditor-icons

--- a/Foreground.css
+++ b/Foreground.css
@@ -202,3 +202,22 @@ body:not(.is-landing) #bodyContent{
 #footer-right-icons{
 
 }
+
+/**
+ *  VisualEditor fixes for use with Foreground skin
+ */
+.oo-ui-barToolGroup > .oo-ui-toolGroup-tools > .oo-ui-tool > .oo-ui-tool-link{
+  padding:0 0.625em;
+}
+.oo-ui-popupToolGroup-handle{
+  height:100%;
+}
+.oo-ui-toolGroup,
+.oo-ui-barToolGroup > .oo-ui-toolGroup-tools > .oo-ui-tool{
+  height:50px;
+}
+/* wrapper */
+
+.ve-ui-surface{
+  background-color:#fff;
+}
